--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -150,7 +150,7 @@
 
   <section id="pricing" class="text-center">
 
-      <h2 class="h1-text">A Plan for Every Dog's Needs</h2>
+      <h2 class="h1-text h2-tablet">A Plan for Every Dog's Needs</h2>
       <p class="pricing-subheading">Simple and affordable price plans for you and your dog.</p>
 
 
@@ -158,7 +158,7 @@
     <div class="row">
 
       <div class="col-lg-4 col-md-6">
-        <div class="card ms-5 me-5  mb-4 box-shadow ">
+        <div class="card mb-4 box-shadow ">
           <div class="card-header">
             <h3>Chihuahua</h3>
           </div>
@@ -177,7 +177,7 @@
       </div>
 
       <div class="col-lg-4 col-md-6">
-        <div class="card ms-5 me-5  mb-4 box-shadow">
+        <div class="card mb-4 box-shadow">
         <div class="card-header">
           <h3>Labrador</h3>
         </div>
@@ -197,7 +197,7 @@
       </div>
 
       <div class="col-lg-4 col-md-12">
-        <div class="card ms-5 me-5  mb-4 box-shadow">
+        <div class="card mb-4 box-shadow">
           <div class="card-header">
             <h3>Mastiff</h3>
           </div>
