--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -223,11 +223,18 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section id="cta" class="cta">
 
     <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <button class="btn btn-dark btn-lg " type="button">
+      <i class="fa-brands fa-apple"></i>
+      Download
+    </button>
+
+    <button class="btn btn-outline-dark btn-lg " type="button">
+      <i class="fa-brands fa-google-play"></i>
+      Download
+    </button>
 
   </section>
 
