--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -225,13 +225,13 @@
 
   <section id="cta" class="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <h3 class="cta-h3">Find the True Love of Your Dog's Life Today.</h3>
     <button class="btn btn-dark btn-lg " type="button">
       <i class="fa-brands fa-apple"></i>
       Download
     </button>
 
-    <button class="btn btn-outline-dark btn-lg " type="button">
+    <button class="btn btn-outline-light btn-lg " type="button">
       <i class="fa-brands fa-google-play"></i>
       Download
     </button>
