--- a/ExpressServer/Calculator/index.html
+++ b/ExpressServer/Calculator/index.html
@@ -1,10 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Express Calculator</title>
 </head>
 <body>
+
+    <form action="index.html" method="post">
+        <label for="num1">First Number</label>
+        <input type="number" name="num1" id="num1">
+
+        <label for="num2">Second Number</label>
+        <input type="number" name="num2" id="num2">
+
+        <button type="submit" name="submit">Calculate</button>
+    </form>
 
 </body>
 </html>
