--- a/ExpressServer/Calculator/bmiCalculator.html
+++ b/ExpressServer/Calculator/bmiCalculator.html
@@ -8,6 +8,15 @@
     <title>BMI Calculator</title>
 </head>
 <body>
+    <form action="/" method="post">
+        <label for="num1">Weight</label>
+        <input type="number" name="num1" id="num1">
+
+        <label for="num2">Height</label>
+        <input type="number" name="num2" id="num2">
+
+        <button type="submit" name="submit">Calculate BMI</button>
+    </form>
 
 </body>
 </html>
