--- a/WeatherProject/index.html
+++ b/WeatherProject/index.html
@@ -8,6 +8,7 @@
     <title>Weather Project</title>
 </head>
 <body>
-
+<label for="cityName">City Name</label>
+<input type="text" name="cityName" id="cityName" placeholder="Dallas...">
 </body>
 </html>
