--- a/MailChimp API/index.html
+++ b/MailChimp API/index.html
@@ -6,12 +6,12 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Newsletter App</title>
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css
 ">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 <body>
-
-    <h1 class="text-center">Hello World</h1>
 
     <main class="form-signin w-100 m-auto">
         <form>
