--- a/MailChimp API/index.html
+++ b/MailChimp API/index.html
@@ -14,6 +14,7 @@
 <body>
 
     <main class="form-signin w-100 m-auto">
+        <img class="img-thumbnail img-margin" src="Images/TK.png" alt="">
         <form>
             <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
