--- a/MailChimp API/index.html
+++ b/MailChimp API/index.html
@@ -16,23 +16,28 @@
     <main class="form-signin w-100 m-auto">
         <img class="img-thumbnail img-margin" src="Images/TK.png" alt="">
         <form>
-            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+            <h1 class="h3 mb-3 fw-normal text-center">ThunderKat Newsletter!</h1>
 
-            <div class="form-floating">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Email address</label>
+            <div class="form-floating ">
+                <input type="text" class="form-control top" id="firstName" placeholder="Password">
+                <label for="firstName">First Name</label>
             </div>
-            <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                <label for="floatingPassword">Password</label>
+            <div class="form-floating ">
+                <input type="text" class="form-control middle" id="lastName" placeholder="Password">
+                <label for="lastName">Last Name</label>
+            </div>
+            <div class="form-floating ">
+                <input type="email" class="form-control bottom" id="email" placeholder="name@example.com">
+                <label for="email">Email address</label>
             </div>
 
-            <div class="checkbox mb-3">
+
+            <div class="checkbox mb-3 text-center">
                 <label>
                     <input type="checkbox" value="remember-me"> Remember me
                 </label>
             </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Up</button>
             <p class="mt-5 mb-3 text-muted">&copy; 2017–2022</p>
         </form>
     </main>
