--- a/MailChimp API/index.html
+++ b/MailChimp API/index.html
@@ -9,13 +9,13 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css
 ">
-    <link rel="stylesheet" href="Public/CSS/styles.css">
+    <link rel="stylesheet" href="CSS/styles.css">
 </head>
 
 <body>
 
     <main class="form-signin w-100 m-auto">
-        <img class="img-thumbnail img-margin" src="Public/Images/TK.png" alt="">
+        <img class="img-thumbnail img-margin" src="Images/TK.png" alt="">
         <form action="/" method="post">
             <h1 class="h3 mb-3 fw-normal text-center">ThunderKat Newsletter!</h1>
 
