--- a/MailChimp API/index.html
+++ b/MailChimp API/index.html
@@ -45,11 +45,11 @@
             </div>
 
 
-            <div class="checkbox mb-3 text-center">
-                <label>
-                    <input type="checkbox" value="remember-me"> Remember me
-                </label>
-            </div>
+<!--            <div class="checkbox mb-3 text-center">-->
+<!--                <label>-->
+<!--                    <input type="checkbox" value="remember-me"> Remember me-->
+<!--                </label>-->
+<!--            </div>-->
             <button class="w-100 btn btn-lg btn-primary" type="submit">Sign Up</button>
             <p class="mt-5 mb-3 text-muted">&copy; 2023</p>
         </form>
