--- a/MailChimp API/failure.html
+++ b/MailChimp API/failure.html
@@ -12,10 +12,9 @@
 </head>
 <body>
 
+    <h1 class="text-center text-success">Uh Oh!</h1>
 
-
-
-
+    <p class="text-center">Looks like something went wrong. Try again later.</p>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
