--- a/MailChimp API/failure.html
+++ b/MailChimp API/failure.html
@@ -12,9 +12,14 @@
 </head>
 <body>
 
-    <h1 class="text-center text-success">Uh Oh!</h1>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="text-center text-success">Uh Oh!</h1>
 
-    <p class="text-center">Looks like something went wrong. Try again later.</p>
+            <p class="text-center">Looks like something went wrong. Try again later.</p>
+        </div>
+    </div>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
