--- a/MailChimp API/success.html
+++ b/MailChimp API/success.html
@@ -11,9 +11,15 @@
 </head>
 <body>
 
-    <h1 class="text-center text-success">Congratulations!</h1>
+    <div class="jumbotron jumbotron-fluid">
+        <div class="container">
+            <h1 class="text-center text-success">Congratulations!</h1>
 
-    <p class="text-center">You've been successfully added to the ThunderKat Newsletter mailing list.</p>
+            <p class="text-center">You've been successfully added to the ThunderKat Newsletter mailing list.</p>
+        </div>
+    </div>
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
