--- a/MailChimp API/success.html
+++ b/MailChimp API/success.html
@@ -13,9 +13,9 @@
 
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1 class="text-center text-success">Congratulations!</h1>
+            <h1 class="text-center text-success display-4">Congratulations!</h1>
 
-            <p class="text-center">You've been successfully added to the ThunderKat Newsletter mailing list.</p>
+            <p class="text-center lead">You've been successfully added to the ThunderKat Newsletter mailing list.</p>
         </div>
     </div>
 
