--- a/DOM/practice.html
+++ b/DOM/practice.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Advanced JS Review</title>
+    <script src="practice.js" defer></script>
 </head>
 <body>
 
@@ -26,6 +27,6 @@
 
 
 
-<script src="practice.js"></script>
+
 </body>
 </html>
