--- a/DOM/practice.html
+++ b/DOM/practice.html
@@ -17,7 +17,8 @@
 
     <form action="">
         <label for="textInput"></label>
-        <input type="text" name="textInput" id="textInput">
+        <input type="text" name="textInput" id="textInput" maxlength="160">
+        <p id="charCount"></p>
     </form>
 
 
