--- a/DOM/loops.html
+++ b/DOM/loops.html
@@ -6,8 +6,15 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Loops JS</title>
+    <link rel="stylesheet" href="loops.css">
+    <script src="loops.js" defer></script>
 </head>
 <body>
+
+<div id="forLoops"></div>
+<div id="forOfLoops"></div>
+<div id="forInLoops"></div>
+<div id="whileLoops"></div>
 
 </body>
 </html>
