--- a/DOM/loops.html
+++ b/DOM/loops.html
@@ -9,9 +9,14 @@
     <link rel="stylesheet" href="loops.css">
     <script src="loops.js" defer></script>
 </head>
+
 <body>
 
-<div id="forLoops"></div>
+<div id="forLoops">
+    <form action="index.html" method="post"></form>
+    <label for="userNum">Enter A Number</label>
+    <input type="number" name="userNum" id="userNum">
+</div>
 <div id="forOfLoops"></div>
 <div id="forInLoops"></div>
 <div id="whileLoops"></div>
