--- a/TicTacToe/index.html
+++ b/TicTacToe/index.html
@@ -6,8 +6,23 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TicTacToe</title>
+
+<!--Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+<!--Google Fonts-->
+
+<!--Bootstrap CDN-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous" defer></script>
+<!--Bootstrap CDN-->
+
+<!--Custom Styles-->
+    <link rel="stylesheet" href="styles/styles.css">
+<!--Custom Styles-->
 </head>
-<body>
+<body >
 <!--Header-->
     <header>
         <h1>
@@ -21,6 +36,7 @@
 
 <!--Game Board-->
     <main>
+
         <aside>
             <h2>
                 Choose Your Name
@@ -42,6 +58,7 @@
                 </div>
             </form>
         </aside>
+
         <section id="gameConfig">
             <ol>
                 <li>
@@ -78,7 +95,25 @@
                 </li>
             </ol>
         </section>
+
         <section id="gameField">
+            <article>
+                <h3>
+                    You Won <span id="winnerName">
+                    PlayerName
+                </span>
+                </h3>
+                <p>
+                    Click "Start New Game" above, to start a new game.
+                </p>
+            </article>
+            
+            <p>
+                Its Your Turn:
+                <span id="activePlayerName">
+                    PlayerName
+                </span>
+            </p>
 
             <ol>
                 <li></li>
@@ -94,19 +129,9 @@
                 <li></li>
             </ol>
         </section>
+
     </main>
 <!--Game Board-->
-
-
-
-
-
-
-
-
-
-
-
 
 </body>
 </html>
